--- a/sam/Makefile
+++ b/sam/Makefile
@@ -1,14 +1,19 @@
 all: alignment-test
 
-fastrecordparser: sam_alignment.rl
+.PHONY : fastrecordparser
+
+.PHONY : recordparser.d
+
+fastrecordparser: 
 	ragel sam_alignment.rl -D -G2
+	../ragel_workarounds/fix_switch_case_fallthrough.sh sam_alignment.d
 	echo 'module sam.recordparser;' | cat - sam_alignment.d > .sam_alignment.d.tmp
 	rm sam_alignment.d
 	mv .sam_alignment.d.tmp recordparser.d
 
-recordparser.d: sam_alignment.rl
+recordparser.d: 
 	ragel sam_alignment.rl -D
-	./fix_static_const.sh
+	../ragel_workarounds/fix_static_const.sh sam_alignment.d
 	echo 'module sam.recordparser;' | cat - sam_alignment.d > .sam_alignment.d.tmp
 	rm sam_alignment.d
 	mv .sam_alignment.d.tmp recordparser.d
