--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   - wget https://dl.dropboxusercontent.com/u/7916095/ldc2-0.13.0-osx-x86_64.tar.bz2
   - tar xjf ldc2-0.13.0-osx-x86_64.tar.bz2
   - export PATH=ldc2-0.13.0-osx-x86_64/bin:$PATH
+    export LIBRARY_PATH=ldc2-0.13.0-osx-x86_64/lib
   - wget https://github.com/craigcitro/r-travis/raw/master/scripts/dropbox.sh
   - chmod +x dropbox.sh
   - curl -L "https://dl.dropboxusercontent.com/u/7916095/shunit2-2.0.3.tgz" | tar zx
