--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/biod/BioD.git
 [submodule "htslib"]
 	path = htslib
-	url = git@github.com:lomereiter/htslib.git
+	url = https://github.com/lomereiter/htslib.git
