--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "htslib"]
 	path = htslib
 	url = https://github.com/lomereiter/htslib.git
+[submodule "lz4"]
+	path = lz4
+	url = https://github.com/Cyan4973/lz4
