Tidy up LDC dependency and move to 1.0.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,18 @@ language: objective-c
 env:
   global:
   - ACCESS_LEVEL=sandbox
+  - LDC_RELEASE=1.0.0
+  - LDC_VERSION=ldc2-${LDC_RELEASE}-osx-x86_64
   - secure: blVtZH4Ia+4MkeTm0gRwL07r/bzhVRJJjUEbtvt0pIQNAtDq5aYuKnCI9sIw99XmEbv9+tSLc6DXq9d6LrDDR0EG7UUB4sTP6XW1XNJXm/kLIuoOCxTnVk6WBHZ4jusMWE0MNNDVmIS8nHrpoDp2ERXbfasD/9GT+3avVUvnsMg=
   - secure: Kzdt/6PLGBhD5f8yOPaPdX5yxHisCPvmfYEKUcEVksKOEurQoIpsNjzAky/yzso4R21T6xycjawFvDXvlVA83m/WJZSDDiFLZVgGoaMoZl9UYOPESeZlJR57/HkjgCss0iz/AX9abUzJ1jGfRt9ujtwcoXB15PqUhbjk2iHF0f0=
   - secure: K0J2r5R8xQMlAUwCaPVWHZUO4U+c+czK6H9bnN5RZPYs5BXpYjdV7/RgkOHsN9b+UksFx7LQRstgcVVcC+mQJRV8slGrx/GSmIA93Dp2mskU9eR1aQjxcUK10VMbIQI6qbXsZvvRSWPirNDQY4s3CjEKEv34t2IGALTkwaU1NmI=
   - secure: J1ta2/K8lj5dbHRvk+jTUAMICSnepfyc8ILCfM/HFCRaXMJQJTX1HDzEMwK3tAzzKaKEp9Tbm2b3IwE1tCtFaAfYUGozmHLirkFfKqCu/jNUkxL807M8NiqMx+H7tu2aR6t9opYyBjNhtuthbIdir3c42nldYdpse0ZLhzQTLfs=
 
 before_install:
-  - brew install xz
-  - wget https://github.com/ldc-developers/ldc/releases/download/v0.17.1/ldc2-0.17.1-osx-x86_64.tar.xz
-  - tar xJf ldc2-0.17.1-osx-x86_64.tar.xz
-  - export PATH=`pwd`/ldc2-0.17.1-osx-x86_64/bin:$PATH
-  - export LIBRARY_PATH=`pwd`/ldc2-0.17.1-osx-x86_64/lib
+  - brew install xz libconfig
+  - curl -L "https://github.com/ldc-developers/ldc/releases/download/v${LDC_RELEASE}/${LDC_VERSION}.tar.xz" | tar Jx
+  - export PATH=$(pwd)/${LDC_VERSION}/bin:${PATH}
+  - export LIBRARY_PATH=$(pwd)/${LDC_VERSION}/lib:${LIBRARY_PATH}
   - git submodule update --init --recursive
   - wget https://github.com/craigcitro/r-travis/raw/master/scripts/dropbox.sh
   - chmod +x dropbox.sh
