--- a/Makefile.guix
+++ b/Makefile.guix
@@ -9,24 +9,26 @@
 #   env LD_LIBRARY_PATH=$HOME/.guix-profile/lib ./build/sambamba
 
 D_COMPILER=ldc2
-# D_FLAGS=-IBioD -release -inline -O2 -c -boundscheck=off -ofbuild/sambamba.o -odbuild -I. 
-D_FLAGS=-IBioD -release -O2 -c -ofbuild/sambamba.o -odbuild -I. 
+D_FLAGS=-IBioD -release -O2 -c -ofbuild/sambamba.o -odbuild -I.
 
 LDC_LIB_PATH=$(HOME)/.guix-profile/lib
 
 STATIC_LIB_PATH=-Lhtslib -L$(LDC_LIB_PATH)
-STATIC_LIB_SUBCMD=$(STATIC_LIB_PATH) -Wl,-Bstatic -lhts -Wl,-Bdynamic
+STATIC_LIB_SUBCMD=$(STATIC_LIB_PATH) -lhts -Wl,-Bdynamic # linker options
 
 PLATFORM := $(shell uname -s)
 
 LINK_CMD=gcc -Wl,--gc-sections -o build/sambamba build/sambamba.o $(STATIC_LIB_SUBCMD) $(LDC_LIB_PATH)/libphobos2-ldc.a $(LDC_LIB_PATH)/libdruntime-ldc.a -lrt -lpthread -lm -llz4
 
-all: sambamba-ldmd2 
+all: sambamba-ldmd2
 
 install:
 	install -m 0755 build/sambamba $(prefix)/bin
 
-sambamba-ldmd2: htslib-static 
+ldc-version-info:
+	./gen_ldc_version_info.py $(shell which ldmd2) > utils/ldc_version_info_.d
+
+sambamba-ldmd2: htslib-static ldc-version-info
 	mkdir -p build/
 	ldmd2 $(D_FLAGS) @sambamba-ldmd-guix.rsp
 	$(LINK_CMD)
