Updated Makefile.guix and bumped version to 0.6.6-pre1 because it should fix the
  Program received signal SIGSEGV, Segmentation fault.
  0x00000000006a4254 in rt.sections_elf_shared.finiTLSRanges() ()

in https://github.com/lomereiter/sambamba/issues/219 by updating Guix ldc runtime to 1.1.0.

--- a/Makefile.guix
+++ b/Makefile.guix
@@ -40,7 +40,7 @@ ldc-version-info:
 build-setup: htslib-static ldc-version-info # sambamba-files
 	mkdir -p build/
 
-default debug release profile: $(OUT)
+guix guix-debug default debug release profile: $(OUT)
 
 # ---- Compile step
 %.o: %.d
