Use phobos and druntime debug libs with debug switches

--- a/Makefile.guix
+++ b/Makefile.guix
@@ -13,19 +13,29 @@ D_COMPILER=ldc2
 LDC_LIB_PATH=$(HOME)/.guix-profile/lib
 
 DFLAGS = -wi -I. -IBioD
+DLIBS  = $(LDC_LIB_PATH)/libphobos2-ldc.a $(LDC_LIB_PATH)/libdruntime-ldc.a
+DLIBS_DEBUG = $(LDC_LIB_PATH)/libphobos2-ldc-debug.a $(LDC_LIB_PATH)/libdruntime-ldc-debug.a
 RPATH  = -L--rpath=$(dir $(realpath $(LDC_LIB_PATH)/libz.so)):$(dir $(realpath $(LDC_LIB_PATH)/liblz4.so))
-LIBS   = htslib/libhts.a -L-L$(LDC_LIB_PATH) $(LDC_LIB_PATH)/libphobos2-ldc.a $(LDC_LIB_PATH)/libdruntime-ldc.a -L-lrt -L-lpthread -L-lm -L-lz -L-llz4
+LIBS   = htslib/libhts.a -L-L$(LDC_LIB_PATH) -L-lrt -L-lpthread -L-lm -L-lz -L-llz4
 SRC    = $(wildcard main.d utils/*.d thirdparty/*.d cram/*.d) $(wildcard BioD/bio/*/*.d BioD/bio/*/*/*.d) $(wildcard sambamba/*.d sambamba/*/*.d sambamba/*/*/*.d)
 OBJ    = $(SRC:.d=.o) utils/ldc_version_info_.o
 OUT    = build/sambamba
 
 # The Guix targets resolve the RPATH automatically
 guix:        DFLAGS += -O -g -inline
+
 guix-debug:  DFLAGS += -O0 -g -d-debug
+
 # The development options are run from ~/.guix-profile and need to inject the RPATH
-debug:       DFLAGS += -O0 -g -d-debug $(RPATH)
+debug:       DFLAGS += -O0 -g -d-debug $(RPATH) -link-debuglib
+
 release:     DFLAGS += -O -release -inline -noboundscheck $(RPATH)
+
 profile:     DFLAGS += -g -O -profile $(RPATH)
+
+guix release:             LIBS += $(DLIBS)
+
+guix-debug debug profile: LIBS += $(DLIBS_DEBUG)
 
 .PHONY: all guix guix-debug debug release profile clean
 
