Add support for cloning Dlang undeaD - this dependency will disappear in the future

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_install:
   - export PATH=$(pwd)/${LDC_VERSION}/bin:${PATH}
   - export LIBRARY_PATH=$(pwd)/${LDC_VERSION}/lib:${LIBRARY_PATH}
   - git submodule update --init --recursive
+  - git clone https://github.com/dlang/undeaD.git
   - wget https://github.com/craigcitro/r-travis/raw/master/scripts/dropbox.sh
   - chmod +x dropbox.sh
   - curl -L "https://dl.dropboxusercontent.com/u/7916095/shunit2-2.0.3.tgz" | tar zx
