Makefile.guix: static linking fails with statically linked applications requires at runtime the shared libraries from the glibc version used for linking

--- a/Makefile.guix
+++ b/Makefile.guix
@@ -17,17 +17,17 @@ DLIBS  = $(LDC_LIB_PATH)/libphobos2-ldc.a $(LDC_LIB_PATH)/libdruntime-ldc.a
 DLIBS_DEBUG = $(LDC_LIB_PATH)/libphobos2-ldc-debug.a $(LDC_LIB_PATH)/libdruntime-ldc-debug.a
 RPATH  = -L--rpath=$(dir $(realpath $(LDC_LIB_PATH)/libz.so)):$(dir $(realpath $(LDC_LIB_PATH)/liblz4.so))
 LIBS   = htslib/libhts.a -L-L$(LDC_LIB_PATH) -L-lrt -L-lpthread -L-lm -L-lz -L-llz4
-LIBS_STATIC = $(LDC_LIB_PATH)/libc.a $(DLIBS)
+LIBS_STATIC = $(LDC_LIB_PATH)/libc.a $(DLIBS) htslib/libhts.a $(LDC_LIB_PATH)/liblz4.a
 SRC    = $(wildcard main.d utils/*.d thirdparty/*.d cram/*.d) $(wildcard undeaD/src/undead/*.d) $(wildcard BioD/bio/*/*.d BioD/bio/*/*/*.d) $(wildcard sambamba/*.d sambamba/*/*.d sambamba/*/*/*.d)
 OBJ    = $(SRC:.d=.o) utils/ldc_version_info_.o
 OUT    = build/sambamba
 
 # The Guix targets resolve the RPATH automatically
-guix:        DFLAGS += -O -g
+guix:        DFLAGS += -O -g # guix strips debug symbols
 
 guix-debug:  DFLAGS += -O0 -g -d-debug
 
-# The development options are run from ~/.guix-profile and need to inject the RPATH
+# The development followin options are run in development from ~/.guix-profile and need to inject the RPATH
 debug:       DFLAGS += -O0 -g -d-debug $(RPATH) -link-debuglib
 
 release:     DFLAGS += -O -release $(RPATH)
@@ -36,7 +36,9 @@ static:      DFLAGS += -O -release -static -L-Bstatic
 
 profile:     DFLAGS += -g -O -profile $(RPATH)
 
-guix release static:      LIBS += $(LIBS_STATIC)
+guix release:   LIBS += $(DLIBS)
+
+static:         LIBS = $(LIBS_STATIC)
 
 guix-debug debug profile: LIBS += $(DLIBS_DEBUG)
 
