--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - git clone https://github.com/dlang/undeaD.git
   - wget https://github.com/craigcitro/r-travis/raw/master/scripts/dropbox.sh
   - chmod +x dropbox.sh
-  - curl -L "https://dl.dropboxusercontent.com/u/7916095/shunit2-2.0.3.tgz" | tar zx
+  - curl -L https://www.dropbox.com/s/7mmiwmc1wm8cuos/shunit2-2.0.3.tgz?dl=1 | tar zx
 
 script:
   - make sambamba-ldmd2-64
