Fix compilation error on Linux - Removed undeaD from .gitignore - Added latest undeaD as a new submodule - Explicitly specify python2 - Fix gcc link flag

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lz4"]
 	path = lz4
 	url = https://github.com/Cyan4973/lz4
+[submodule "undeaD"]
+	path = undeaD
+	url = https://github.com/dlang/undeaD
