--- a/Makefile.guix
+++ b/Makefile.guix
@@ -71,6 +71,8 @@ $(OUT): build-setup $(OBJ)
 test:
 	./.run_tests.sh
 
+check: test
+
 debug-strip: debug
 	objcopy --only-keep-debug build/sambamba sambamba.debug
 	objcopy --strip-debug build/sambamba
