--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 
 script:
   - make sambamba-ldmd2-64
-  - ./.run_tests.sh
+  - ./run_tests.sh
 
 after_success:
   - tar cjvf sambamba_osx.tar.bz2 ./build/sambamba
