--- a/Makefile.guix
+++ b/Makefile.guix
@@ -57,6 +57,10 @@ guix-debug debug profile: LIBS += $(DLIBS_DEBUG)
 
 all: debug
 
+sambamba/bio2/pileup.d: sambamba/bio2/bam/reader.d
+
+sambamba/subsample.d: sambamba/bio2/pileup.d
+
 utils/ldc_version_info_.d:
 	./gen_ldc_version_info.py $(shell which ldc2) > utils/ldc_version_info_.d
 
