--- a/Makefile.guix
+++ b/Makefile.guix
@@ -96,12 +96,14 @@ debug-strip: debug
 install:
 	install -m 0755 bin/sambamba $(prefix)/bin
 
-clean: clean-d clean-tests
+clean-c:
 	cd htslib ; make clean
 
 clean-d:
+	rm -v $(OBJ) $(OUT) trace.{def,log}
 	rm -v bin/*
-	rm -f $(OBJ) $(OUT) trace.{def,log}
 
 clean-tests:
 	rm -rf output/*
+
+clean: clean-d clean-tests
