--- a/Makefile.guix
+++ b/Makefile.guix
@@ -1,4 +1,6 @@
-# GNU Guix makefile
+# GNU Guix makefile. GNU Guix is the package manager for GNU and we use it for
+# sambamba development and deployment. Normally use the standard Makefile 
+# instead.
 #
 # To build sambamba on GNU Guix:
 #
